--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_script: "sudo aptitude -y -q install curl make libyaml-dev"
 before_install:
   - git clone git://github.com/nddrylliog/rock.git 
   - cd rock && make rescue
+  - export PATH=$PATH:$PWD/rock/bin
 
 script:
   - export OOC_LIBS=$PWD
