--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 script:
   - export OOC_LIBS=$PWD
   - cd samples
-  - rm -rf parse-events
-  - rock -v parse-events.ooc
-  - ./parse-events
+  - mkdir -p travis
+  - rock -v parse-events.ooc -o=travis/parse-events
+  - output/parse-events
 
