--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
   - rock -v from-string.ooc -o=travis/from-string && travis/from-string
   - rock -v from-file.ooc -o=travis/from-file && travis/from-file
   - rock -v walker.ooc -o=travis/walker && travis/walker
+  - rock -v utils-demo.ooc -o=travis/utils-demo && travis/utils-demo
 
